// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input Component AllowClear renders correctly 1`] = `
<DocumentFragment>
  <span
    class="mia-platform-input-affix-wrapper mia-platform-input-outlined input fullWidth input"
  >
    <input
      class="mia-platform-input"
      type="text"
      value="text"
    />
    <span
      class="mia-platform-input-suffix"
    >
      <span
        class="mia-platform-input-clear-icon"
        role="button"
        tabindex="-1"
      >
        <span
          aria-label="close-circle"
          class="anticon anticon-close-circle"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="close-circle"
            fill="currentColor"
            fill-rule="evenodd"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
            />
          </svg>
        </span>
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`Input Component Hidden renders correctly 1`] = `
<DocumentFragment>
  <input
    class="mia-platform-input mia-platform-input-outlined input fullWidth input"
    type="hidden"
    value=""
  />
</DocumentFragment>
`;

exports[`Input Component Password renders correctly 1`] = `
<DocumentFragment>
  <input
    class="mia-platform-input mia-platform-input-outlined input fullWidth input"
    type="number"
    value=""
  />
</DocumentFragment>
`;

exports[`Input Component Search renders correctly 1`] = `
<DocumentFragment>
  <input
    class="mia-platform-input mia-platform-input-outlined input fullWidth input"
    type="search"
    value=""
  />
</DocumentFragment>
`;

exports[`Input Component TextArea renders correctly 1`] = `
<DocumentFragment>
  <input
    class="mia-platform-input mia-platform-input-outlined input fullWidth input"
    type="textarea"
    value=""
  />
</DocumentFragment>
`;

exports[`Input Component With left icon renders correctly 1`] = `
<DocumentFragment>
  <span
    class="mia-platform-input-affix-wrapper mia-platform-input-outlined input fullWidth input"
  >
    <span
      class="mia-platform-input-prefix"
    >
      <svg
        color="currentColor"
        fill="none"
        height="12"
        role="img"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        style="color: currentColor;"
        viewBox="0 0 24 24"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="11"
          cy="11"
          r="8"
        />
        <line
          x1="21"
          x2="16.65"
          y1="21"
          y2="16.65"
        />
      </svg>
    </span>
    <input
      class="mia-platform-input"
      type="text"
      value=""
    />
  </span>
</DocumentFragment>
`;

exports[`Input Component With right icon renders correctly 1`] = `
<DocumentFragment>
  <span
    class="mia-platform-input-affix-wrapper mia-platform-input-outlined input fullWidth input"
  >
    <input
      class="mia-platform-input"
      type="text"
      value=""
    />
    <span
      class="mia-platform-input-suffix"
    >
      <svg
        color="currentColor"
        fill="none"
        height="12"
        role="img"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        style="color: currentColor;"
        viewBox="0 0 24 24"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="11"
          cy="11"
          r="8"
        />
        <line
          x1="21"
          x2="16.65"
          y1="21"
          y2="16.65"
        />
      </svg>
    </span>
  </span>
</DocumentFragment>
`;

exports[`Input Component renders correctly 1`] = `
<DocumentFragment>
  <input
    class="mia-platform-input mia-platform-input-outlined input fullWidth input"
    type="text"
    value=""
  />
</DocumentFragment>
`;
